// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches the snapshot when failed 1`] = `
<div>
  <div
    class="px-4"
  >
    <h5>
      <b>
        Account Info
      </b>
    </h5>
    <div
      class="d-flex"
    >
      <div
        class="py-2"
      >
        <div
          class="paper"
          style="border-radius: 50px; display: inline-block; margin: 0px; overflow: hidden; padding: 0px; background-color: rgb(3, 85, 94); height: 100px; width: 100px;"
        >
          <svg
            height="100"
            width="100"
            x="0"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <rect
              fill="#FA6800"
              height="100"
              rx="0"
              ry="0"
              transform="translate(7.332176576371118 5.932298588714297) rotate(79.1 50 50)"
              width="100"
              x="0"
              y="0"
            />
            <rect
              fill="#236FE1"
              height="100"
              rx="0"
              ry="0"
              transform="translate(57.127223703787955 -31.273129535154165) rotate(409.1 50 50)"
              width="100"
              x="0"
              y="0"
            />
            <rect
              fill="#C81456"
              height="100"
              rx="0"
              ry="0"
              transform="translate(56.64908831248396 43.86654244724025) rotate(76.8 50 50)"
              width="100"
              x="0"
              y="0"
            />
            <rect
              fill="#FB186B"
              height="100"
              rx="0"
              ry="0"
              transform="translate(7.595406197345499 -101.65110911481909) rotate(394.6 50 50)"
              width="100"
              x="0"
              y="0"
            />
          </svg>
        </div>
      </div>
      <div
        class="px-4 text-left text-secondary"
      >
        <b>
          Address
        </b>
        <p
          class="pt-1 font-monospace"
        >
          <a
            href="devex.zilliqa.com/address/zil18j0lvshp0t6ucrqsjkfunpjdg55my3aqenns9v?network=https%3A%2F%2Fdev-api.zilliqa.com"
            rel="noopener noreferrer"
            target="_blank"
          >
            zil18j0lvshp0t6ucrqsjkfunpjdg55my3aqenns9v
          </a>
           
          <br />
          <small>
            (ByStr20: 0x3C9Ff642E17aF5Cc0C109593C9864d4529B247A0)
          </small>
        </p>
        <b>
          Public Key
        </b>
        <p>
          <code>
            0245DC2911EDC02F
            ...
          </code>
           
        </p>
        <b>
          Private Key
        </b>
        <p>
          <code>
            0245DC2911EDC02F
            ...
          </code>
           
        </p>
        <b>
          Balance
          <button
            aria-label=""
            class="sc-bdVaJa jUDwrg mb-1 py-0 px-1"
            type="submit"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"
              />
            </svg>
             
            
             
          </button>
        </b>
        <div
          data-testid="container-error"
        >
          Something went wrong: undefined
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`matches the snapshot when loaded 1`] = `
<div>
  <div
    class="px-4"
  >
    <h5>
      <b>
        Account Info
      </b>
    </h5>
    <div
      class="d-flex"
    >
      <div
        class="py-2"
      >
        <div
          class="paper"
          style="border-radius: 50px; display: inline-block; margin: 0px; overflow: hidden; padding: 0px; background-color: rgb(3, 85, 94); height: 100px; width: 100px;"
        >
          <svg
            height="100"
            width="100"
            x="0"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <rect
              fill="#FA6800"
              height="100"
              rx="0"
              ry="0"
              transform="translate(7.332176576371118 5.932298588714297) rotate(79.1 50 50)"
              width="100"
              x="0"
              y="0"
            />
            <rect
              fill="#236FE1"
              height="100"
              rx="0"
              ry="0"
              transform="translate(57.127223703787955 -31.273129535154165) rotate(409.1 50 50)"
              width="100"
              x="0"
              y="0"
            />
            <rect
              fill="#C81456"
              height="100"
              rx="0"
              ry="0"
              transform="translate(56.64908831248396 43.86654244724025) rotate(76.8 50 50)"
              width="100"
              x="0"
              y="0"
            />
            <rect
              fill="#FB186B"
              height="100"
              rx="0"
              ry="0"
              transform="translate(7.595406197345499 -101.65110911481909) rotate(394.6 50 50)"
              width="100"
              x="0"
              y="0"
            />
          </svg>
        </div>
      </div>
      <div
        class="px-4 text-left text-secondary"
      >
        <b>
          Address
        </b>
        <p
          class="pt-1 font-monospace"
        >
          <a
            href="devex.zilliqa.com/address/zil18j0lvshp0t6ucrqsjkfunpjdg55my3aqenns9v?network=https%3A%2F%2Fdev-api.zilliqa.com"
            rel="noopener noreferrer"
            target="_blank"
          >
            zil18j0lvshp0t6ucrqsjkfunpjdg55my3aqenns9v
          </a>
           
          <br />
          <small>
            (ByStr20: 0x3C9Ff642E17aF5Cc0C109593C9864d4529B247A0)
          </small>
        </p>
        <b>
          Public Key
        </b>
        <p>
          <code>
            0245DC2911EDC02F
            ...
          </code>
           
        </p>
        <b>
          Private Key
        </b>
        <p>
          <code>
            0245DC2911EDC02F
            ...
          </code>
           
        </p>
        <b>
          Balance
          <button
            aria-label=""
            class="sc-bdVaJa jUDwrg mb-1 py-0 px-1"
            disabled=""
            type="submit"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"
              />
            </svg>
             
            
             
          </button>
        </b>
        <div
          data-testid="container-loading"
        >
          <small>
            Loading...
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`matches the snapshot when loaded 2`] = `
<div>
  <div
    class="px-4"
  >
    <h5>
      <b>
        Account Info
      </b>
    </h5>
    <div
      class="d-flex"
    >
      <div
        class="py-2"
      >
        <div
          class="paper"
          style="border-radius: 50px; display: inline-block; margin: 0px; overflow: hidden; padding: 0px; background-color: rgb(3, 85, 94); height: 100px; width: 100px;"
        >
          <svg
            height="100"
            width="100"
            x="0"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <rect
              fill="#FA6800"
              height="100"
              rx="0"
              ry="0"
              transform="translate(7.332176576371118 5.932298588714297) rotate(79.1 50 50)"
              width="100"
              x="0"
              y="0"
            />
            <rect
              fill="#236FE1"
              height="100"
              rx="0"
              ry="0"
              transform="translate(57.127223703787955 -31.273129535154165) rotate(409.1 50 50)"
              width="100"
              x="0"
              y="0"
            />
            <rect
              fill="#C81456"
              height="100"
              rx="0"
              ry="0"
              transform="translate(56.64908831248396 43.86654244724025) rotate(76.8 50 50)"
              width="100"
              x="0"
              y="0"
            />
            <rect
              fill="#FB186B"
              height="100"
              rx="0"
              ry="0"
              transform="translate(7.595406197345499 -101.65110911481909) rotate(394.6 50 50)"
              width="100"
              x="0"
              y="0"
            />
          </svg>
        </div>
      </div>
      <div
        class="px-4 text-left text-secondary"
      >
        <b>
          Address
        </b>
        <p
          class="pt-1 font-monospace"
        >
          <a
            href="devex.zilliqa.com/address/zil18j0lvshp0t6ucrqsjkfunpjdg55my3aqenns9v?network=https%3A%2F%2Fdev-api.zilliqa.com"
            rel="noopener noreferrer"
            target="_blank"
          >
            zil18j0lvshp0t6ucrqsjkfunpjdg55my3aqenns9v
          </a>
           
          <br />
          <small>
            (ByStr20: 0x3C9Ff642E17aF5Cc0C109593C9864d4529B247A0)
          </small>
        </p>
        <b>
          Public Key
        </b>
        <p>
          <code>
            0245DC2911EDC02F
            ...
          </code>
           
        </p>
        <b>
          Private Key
        </b>
        <p>
          <code>
            0245DC2911EDC02F
            ...
          </code>
           
        </p>
        <b>
          Balance
          <button
            aria-label=""
            class="sc-bdVaJa jUDwrg mb-1 py-0 px-1"
            type="submit"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"
              />
            </svg>
             
            
             
          </button>
        </b>
        <div
          data-testid="container-data"
        >
          <small>
            0.0000001 ZIL
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`matches the snapshot when no data 1`] = `
<div>
  <div
    class="px-4"
  >
    <h5>
      <b>
        Account Info
      </b>
    </h5>
    <div
      class="d-flex"
    >
      <div
        class="py-2"
      >
        <div
          class="paper"
          style="border-radius: 50px; display: inline-block; margin: 0px; overflow: hidden; padding: 0px; background-color: rgb(3, 85, 94); height: 100px; width: 100px;"
        >
          <svg
            height="100"
            width="100"
            x="0"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <rect
              fill="#FA6800"
              height="100"
              rx="0"
              ry="0"
              transform="translate(7.332176576371118 5.932298588714297) rotate(79.1 50 50)"
              width="100"
              x="0"
              y="0"
            />
            <rect
              fill="#236FE1"
              height="100"
              rx="0"
              ry="0"
              transform="translate(57.127223703787955 -31.273129535154165) rotate(409.1 50 50)"
              width="100"
              x="0"
              y="0"
            />
            <rect
              fill="#C81456"
              height="100"
              rx="0"
              ry="0"
              transform="translate(56.64908831248396 43.86654244724025) rotate(76.8 50 50)"
              width="100"
              x="0"
              y="0"
            />
            <rect
              fill="#FB186B"
              height="100"
              rx="0"
              ry="0"
              transform="translate(7.595406197345499 -101.65110911481909) rotate(394.6 50 50)"
              width="100"
              x="0"
              y="0"
            />
          </svg>
        </div>
      </div>
      <div
        class="px-4 text-left text-secondary"
      >
        <b>
          Address
        </b>
        <p
          class="pt-1 font-monospace"
        >
          <a
            href="devex.zilliqa.com/address/zil18j0lvshp0t6ucrqsjkfunpjdg55my3aqenns9v?network=https%3A%2F%2Fdev-api.zilliqa.com"
            rel="noopener noreferrer"
            target="_blank"
          >
            zil18j0lvshp0t6ucrqsjkfunpjdg55my3aqenns9v
          </a>
           
          <br />
          <small>
            (ByStr20: 0x3C9Ff642E17aF5Cc0C109593C9864d4529B247A0)
          </small>
        </p>
        <b>
          Public Key
        </b>
        <p>
          <code>
            0245DC2911EDC02F
            ...
          </code>
           
        </p>
        <b>
          Private Key
        </b>
        <p>
          <code>
            0245DC2911EDC02F
            ...
          </code>
           
        </p>
        <b>
          Balance
          <button
            aria-label=""
            class="sc-bdVaJa jUDwrg mb-1 py-0 px-1"
            type="submit"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"
              />
            </svg>
             
            
             
          </button>
        </b>
        <div
          data-testid="container-no-data"
        >
          No data
        </div>
      </div>
    </div>
  </div>
</div>
`;
